# serial-jobs

./: .pre-commit-config.yaml  README.md  README.rst  configuration.yaml  convert_config.py  pyproject.toml  run.py  setup.cfg
config_stubs/: epever-charge-controller.yaml  jbd-battery-management-system.yaml  mqtt-brokers.yaml  orno-energy-meter.yaml
src/serial_jobs/: __init__.py  base.py  config.py  data.py  handler.py  job.py  main.py  mqtt.py  schema.py  task.py  value.py
src/serial_jobs/device/: __init__.py  base.py  bms.py  modbus.py
