[metadata]
name = serial-jobs
version = attr: serial_jobs.__version__
author = Peter Bašista
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Private :: Do Not Upload
    Topic :: Home Automation
    Topic :: Utilities
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    gmqtt
    minimalmodbus
    strictyaml

[options.extras_require]
dev =
    pre-commit
    pylint
